# cmake_tutorials

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  clang_format.sh
.github/workflows/: ci.yml
AnotherProject/: CMakeLists.txt
Exporting/: CMakeLists.txt  MyProjectConfig.cmake.in
Exporting/include/: my_header.h
Exporting/src/: main.cpp  my_source_file.cpp
ExportingConsumer/: CMakeLists.txt
ExportingConsumer/src/: consumer_source.cpp
MainProject/: CMakeLists.txt
MainProject/MyLibrary/: CMakeLists.txt
MainProject/MyLibrary/cmake/: MyLibraryConfig.cmake.in
MainProject/MyLibrary/include/: MyLibrary.hpp
MainProject/MyLibrary/src/: MyLibrary.cpp
MainProject/Tools/: CMakeLists.txt
MainProject/Tools/src/: main.cpp
MainProject/src/: main.cpp
apps/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
project/src/: CMakeLists.txt
project/tests/: CMakeLists.txt
project/tests/src/: main.cpp
project/tests/src/spec/: testlib.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/spec/: testlib.cpp
